# fastapi-rebac

./: .gitignore  LICENSE  README.md  pyproject.toml
example_app/: .env.example  README.md  alembic.ini
example_app/alembic/: env.py
example_app/alembic/versions/: 20260502_0001_initial.py  20260503_0002_suspicious_alert.py
example_app/app/: __init__.py  auth.py  config.py  db.py  main.py  seed_admin.py
example_yandex_2fa_app/: .env.example  README.md  alembic.ini
example_yandex_2fa_app/alembic/: env.py
example_yandex_2fa_app/alembic/versions/: 20260502_0001_initial.py  20260502_0002_yandex_2fa.py  20260502_0003_suspicious_alert.py
example_yandex_2fa_app/app/: auth.py  config.py  main.py  models.py  schemas.py
fastapi_rebac/: __init__.py  __version__.py  access.py  auth.py  csrf.py  enums.py  errors.py  fastapi_rebac.py  schemas.py  types.py
fastapi_rebac/admin/: __init__.py  api.py  auth_tables.py  groups.py  login.py  redirects.py  resources.py  router.py  suspicious_alerts.py  users.py  utils.py
fastapi_rebac/anomaly/: README.md  __init__.py  config.py  feature_builder.py  pyod_detector.py  rules.py  service.py
fastapi_rebac/db/: __init__.py  adapters.py  base.py
fastapi_rebac/integrations/: __init__.py
fastapi_rebac/integrations/yandex_2fa/: __init__.py  admin.py  config.py  models.py  router.py  schemas.py  service.py
fastapi_rebac/managers/: __init__.py  access_manager.py  audit_manager.py  user_manager.py
fastapi_rebac/models/: __init__.py  audit_log.py  auth_table.py  group.py  group_membership.py  group_permission.py  suspicious_alert.py  user.py  user_permission.py
fastapi_rebac/static/rebac_admin/css/: rebac_admin.css
fastapi_rebac/static/rebac_admin/js/: rebac_admin.js
fastapi_rebac/templates/rebac_admin/: auth_tables.html  base.html  group_delete.html  group_detail.html  group_form.html  groups.html  index.html  login.html  resource_delete.html  resource_detail.html  resource_form.html  resource_list.html  resources.html  user_create.html  user_delete.html  user_detail.html  user_edit.html  user_password.html  users.html
