[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-rebac"
dynamic = ["version"]
description = "RBAC/ReBAC authorization helpers, audit logging, suspicious activity detection, and admin UI for FastAPI applications."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Ldokov Roman", email = "ldokovroma@gmail.com" },
]
maintainers = [
  { name = "Ldokov Roman", email = "ldokovroma@gmail.com" },
]
keywords = [
  "fastapi",
  "fastapi-users",
  "sqlalchemy",
  "rbac",
  "rebac",
  "authorization",
  "access-control",
  "audit-log",
  "security",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.110,<1.0",
  "fastapi-users[sqlalchemy]>=14.0,<16.0",
  "SQLAlchemy>=2.0,<3.0",
  "pydantic>=2.0,<3.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "email-validator>=2.0,<3.0",
  "greenlet>=3.0,<4.0",
]

[project.optional-dependencies]
anomaly = [
  "pyod>=2.0,<4.0",
]
postgres = [
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
]
yandex = [
  "httpx>=0.27,<1.0",
]
example = [
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "python-dotenv>=1.0,<2.0",
  "uvicorn[standard]>=0.27,<1.0",
]
test = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "httpx>=0.27,<1.0",
]
lint = [
  "ruff>=0.6,<1.0",
  "mypy>=1.8,<2.0",
]
release = [
  "build>=1.2,<2.0",
  "twine>=5.0,<7.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.8,<2.0",
  "build>=1.2,<2.0",
  "twine>=5.0,<7.0",
]
all = [
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "httpx>=0.27,<1.0",
  "pyod>=2.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/lra-itsolution/fastapi-rebac/"
Repository = "https://github.com/lra-itsolution/fastapi-rebac/"
Issues = "https://github.com/lra-itsolution/fastapi-rebac/issues"
Changelog = "https://github.com/lra-itsolution/fastapi-rebac/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fastapi_rebac*"]
exclude = [
  "example_app*",
  "example_yandex_2fa_app*",
  "tests*",
]


[tool.setuptools.dynamic]
version = { attr = "fastapi_rebac.__version__.__version__" }

[tool.setuptools.package-data]
fastapi_rebac = [
  "py.typed",
  "templates/**/*.html",
  "static/**/*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["fastapi_rebac", "example_app", "example_yandex_2fa_app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
